# CDScompare

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: Generate Documentation.yml  python-app.yml
cdscompare/: cli.py
cdscompare/R_util/: README.txt  lrrtransfer_evaluation_methods.R
cdscompare/python_util/: annotation.py  argparser.py  cluster.py  comparison.py  io.py  locus.py  match.py  multi.py  seqid_harmonization.py
cdscompare/tests/: test_functional_seqid_harmonization.py  test_units_CDScompare.py  test_units_comparison.py  test_units_intervals.py
data/tests/: README_test_files.txt  basic_test.gff3  cluster_3274_ncbi.gff  cluster_3274_urgi.gff  comment_test.gff3  diff-start-after_test.gff3  diff-start-before_test.gff3  diff_dnaMol-2-chr_test.gff3  fusion_test.gff3  identical-2-loci_test.gff3  identical_test.gff3  length_computation_alt_test.gff3  length_computation_ref_test.gff3  minus-CDS_test.gff3  missed_overlap_alt.gff  missed_overlap_ref.gff  multi_chromosome_test_alt.gff3  multi_mrna_BW_alt.gff  multi_mrna_BW_ref.gff  multiple_mRNAs_test.gff3  other_fusion_test.gff3  overlapping-loci-alt_test.gff3  (+13 more)
documentation/: Doxyfile  README_documentation.md  README_documentation.txt  documentation.txt
script/: CDScompR.py  CDScompare.py  CDSmulticompR.py  Comparaison_des_methodes_lrrtransfer.csv  Comparaison_transfert_Mars_Mai.csv  annot_CSC.py  cluster.py  comparison.py  intervals_utils.py  locus.py  lrrtransfer_evaluation_mars_may.R  lrrtransfer_evaluation_methods.R  main.py  pre_comparison.py  read_files.py  test_basic.py  test_units.py  test_units_CDScompR.py  test_units_annot_CSC.py  test_units_comparison.py  test_units_intervals_utils.py  test_units_locus.py  test_units_pre_comparison.py  test_units_read_files.py
(+30 files in other folders)
