[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cdscompare"
version = "0.2.0"
description = "Compare CDS annotations from one or multiple GFF files"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "attrs>=23.0.0",
]
[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "flake8>=6.0",
]
docs = [
  "sphinx>=7.0",
  "sphinx-autodoc-typehints",
  "furo",
]

[project.scripts]
cdscompare = "cdscompare.cli:main"

[tool.setuptools]
packages = ["cdscompare", "cdscompare.python_util"]
